--- a/components/carousel.html
+++ b/components/carousel.html
@@ -334,7 +334,7 @@ variables:
     {% include snippet.html content=carousel_5_example horizontal=true more=true %}
 
     {% include anchor.html name="Navigation" %}
-    <h4 class="subtitle">You can modify the way display the navigation conatiner</h4>
+    <h4 class="subtitle">You can modify the way to display the navigation container</h4>
     {% include snippet.html content=carousel_example size="one-half" more=true %}
     <h4 class="subtitle">Centered</h4>
     {% include snippet.html content=carousel_navigation_centered_example size="one-half" more=true %}
@@ -342,22 +342,22 @@ variables:
     {% include snippet.html content=carousel_navigation_overlay_example size="one-half" more=true %}
 
     {% include anchor.html name="AutoPlay" %}
-    <p>You can set carousel to autoPlay by adding <code>data-autoplay="true"</code>'s attribute to the carousel element.</p>
-    <p>Manage the delay between slides by adding <code>data-delay="5000"</code>'s attribute (default value is 5s).</p>
+    <p>You can set the carousel to autoPlay by adding the <code>data-autoplay="true"</code> attribute to the carousel element.</p>
+    <p>Manage the delay between slides by adding the <code>data-delay="5000"</code> attribute (default value is 5s).</p>
     {% include snippet.html content=carousel_autoplay_example size="one-half" more=true %}
 
     {% include anchor.html name="Animation" %}
-    <p>You can animate the carousel by using the <code>carousel-animated</code> added to <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> modifiers directly on carousel element.</p>
+    <p>You can animate the carousel by using the <code>carousel-animated</code> along with either the <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> modifiers directly on the carousel element.</p>
     <div class="message is-warning">
       <div class="message-body">
         <div class="content">
-          Fade animation only works with hero-carousel.
+          The fade animation works only with the hero-carousel.
         </div>
       </div>
     </div>
 
     {% include anchor.html name="Hero Carousel" %}
-    <p>You can even use carousel within <code>hero</code> by using <code>hero-carousel</code> instead of <code>carousel</code> class to the main container</p>
+    <p>You can use the carousel within a <code>.hero</code> by using <code>.hero-carousel</code> instead of <code>.carousel</code> to the main container</p>
   </div>
 </section>
 <section class="section is-fullwidth">
