--- a/components/pricingtable.html
+++ b/components/pricingtable.html
@@ -261,11 +261,11 @@ variables:
     {% include snippet.html content=pricingtable_example horizontal=true more=true %}
 
     <h3 class="title">Comparative</h3>
-    <h4 class="subtitle">You can choose to display the pricing tables as a comparative table by adding <code>is-comparative</code> modifier to the pricing-table element.</h4>
+    <h4 class="subtitle">You can choose to display the pricing tables as a comparative table by adding the <code>.is-comparative</code> modifier to the pricing-table element.</h4>
     {% include snippet.html content=pricingtable_comparison_example horizontal=true more=true %}
 
     <h3 class="title">Orientation</h3>
-    <h4 class="subtitle">You can choose to display the pricing tables horizontally just by adding <code>is-horizontal</code> modifier to the pricing-table element.</h4>
+    <h4 class="subtitle">You can choose to display the pricing tables horizontally just by adding the <code>.is-horizontal</code> modifier to the pricing-table element.</h4>
     {% include snippet.html content=pricingtable_horizontal_example horizontal=true more=true %}
 
     {% include variables.html %}
