--- a/components/quickview.html
+++ b/components/quickview.html
@@ -112,7 +112,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="column">
         <h1 class="title">{{ page.title }}</h1>
         <h2 class="subtitle">
-          Display quick view of data without leaving the current page
+          Display a quick view of data without leaving the current page
         </h2>
       </div>
       <div class="column is-narrow">
