--- a/components/steps.html
+++ b/components/steps.html
@@ -76,7 +76,7 @@ jsOptions:
     <div class="step-marker">3</div>
     <div class="step-details">
       <p class="step-title">Step 3</p>
-      <p>This is the third step. One more last before the end.</p>
+      <p>This is the third step. One more step before the end.</p>
     </div>
   </div>
   <div class="step-item">
@@ -223,12 +223,12 @@ jsOptions:
       </div>
     </div>
     <div class="step-content has-text-centered">
-      <h1 class="title is-4">Your account is now created !</h1>
+      <h1 class="title is-4">Your account is now created!</h1>
     </div>
   </div>
   <div class="steps-actions">
     <div class="steps-action">
-      <a href="#" data-nav="previous" class="button is-light">previous</a>
+      <a href="#" data-nav="previous" class="button is-light">Previous</a>
     </div>
     <div class="steps-action">
       <a href="#" data-nav="next" class="button is-light">Next</a>
@@ -347,7 +347,7 @@ jsOptions:
     <div class="step-marker">3</div>
     <div class="step-details">
       <p class="step-title">Step 3</p>
-      <p>This is the third step. One more last before the end.</p>
+      <p>This is the third step. One more step before the end.</p>
     </div>
   </li>
   <li class="step-item is-danger is-active">
@@ -370,7 +370,7 @@ jsOptions:
       <div class="column">
         <h1 class="title">Steps</h1>
         <h2 class="subtitle">
-          Display <strong>steps</strong> for a process (like sign-up, or order, form), in different colors, sizes, and states
+          Display <strong>steps</strong> for a process (like sign-up or an order form) with different colors, sizes, and states
         </h2>
       </div>
       <div class="column is-narrow">
