--- a/components/timeline.html
+++ b/components/timeline.html
@@ -310,13 +310,13 @@ variables:
     {% include snippet.html content=timeline_colors_line_example size="one-half" more=true %}
 
     <br />
-    <h4 class="subtitle">You can even use them both together</h4>
+    <h4 class="subtitle">You can use them together</h4>
     {% include snippet.html content=timeline_colors_both_example size="one-half" more=true %}
 
     <br />
 
     {% include anchor.html name="Positions" %}
-    <h4 class="subtitle">You can use <code>is-centered</code> modifiers on timeline</h4>
+    <h4 class="subtitle">You can use the <code>is-centered</code> modifiers on timeline</h4>
     {% include snippet.html content=timeline_centered_example size="one-half" more=true %}
 
     <br />
