--- a/layout/divider.html
+++ b/layout/divider.html
@@ -64,7 +64,7 @@ variables:
 
     <hr>
 
-    <p>You can easily display a message on the divider by adding <code>data-content</code> attribute to the divider.</p>
+    <p>You can easily display a message on the divider by adding the <code>data-content</code> attribute to the divider.</p>
     <br />
     {% include snippet.html content=divider_example size="one-half" %}
 
