--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 0.3.3
+npm-version: 2.0.0
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
@@ -458,3 +458,6 @@ variables:
 </section>
 
 <script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-carousel/dist/bulma-carousel.min.js"></script>
+<script>
+var carousels = Carousel.attach();
+</script>
