fix(cacousel): table display

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -382,32 +382,32 @@ variables:
           <table class="table is-bordered">
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Triggered at</th>
+                <th class="is-narrow">Name</th>
+                <th class="is-narrow">Triggered at</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>carousel:ready</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   once carousel has been iniatited
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>carousel:slide:before</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   just before sliding
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>carousel:slide:after</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   just after sliding
                 </td>
               </tr>
@@ -417,32 +417,32 @@ variables:
           <table class="table is-bordered">
             <thead>
               <tr>
-                <th>Property</th>
-                <th>Description</th>
+                <th class="is-narrow">Property</th>
+                <th class="is-narrow">Description</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>carousel</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   The carousel instance that triggered the event.
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>node</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   The Node element related to the current slide item.
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="is-narrow">
                   <code>pos</code>
                 </td>
-                <td>
+                <td class="is-narrow">
                   The position (items relative) of the current item.
                 </td>
               </tr>
