minor doc update

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -49,6 +49,37 @@ variables:
 </div>
 {% endcapture %}
 
+{% capture carousel_fade_example %}
+<div class='carousel carousel-animated carousel-animate-fade'>
+  <div class='carousel-container'>
+    <div class='carousel-item has-background is-active'>
+      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+      <div class="title">Merry Christmas</div>
+    </div>
+    <div class='carousel-item has-background'>
+      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+    </div>
+    <div class='carousel-item has-background'>
+      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+      <div class="title">Sushi time</div>
+    </div>
+    <div class='carousel-item has-background'>
+      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+      <div class="title">Life</div>
+    </div>
+  </div>
+  <div class="carousel-navigation">
+    <div class="carousel-nav-left">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </div>
+    <div class="carousel-nav-right">
+      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
 {% capture carousel_5_example %}
 <div class='carousel carousel-animated carousel-animate-slide' data-size="5">
   <div class='carousel-container'>
@@ -348,6 +379,7 @@ variables:
 
     {% include anchor.html name="Animation" %}
     <p>You can animate the carousel by using the <code>carousel-animated</code> along with either the <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> modifiers directly on the carousel element.</p>
+    {% include snippet.html content=carousel_fade_example size="one-half" more=true %}
     </div>
 
     {% include anchor.html name="Hero Carousel" %}
@@ -369,7 +401,7 @@ variables:
           {% highlight javascript %}{{ carousel_js }}{% endhighlight %}
 
           <p>Then just add the following code once your DOM's ready:</p>
-          {% highlight javascript %}var carousels = bulmaCarousel.attach();{% endhighlight %}
+          {% highlight javascript %}var carousels = bulmaCarousel.attach(); // carousels now contains an array of all Carousel instances{% endhighlight %}
 
           <hr />
           <p>You can react on different events by using {% highlight javascript %}CarouselInstance.on('carousel:ready', function(item) {});{% endhighlight %}</p>
