Fix carousel page

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -361,7 +361,7 @@ variables:
     {% include snippet.html content=carousel_example size="one-half" more=true %}
 
     <hr>
-    <h4 class="subtitle">You can display up to 5 items (usefull to display list of partners for example)</h4>
+    <h4 class="subtitle">You can display multiple items (usefull to display list of partners for example)</h4>
     {% include snippet.html content=carousel_5_example horizontal=true more=true %}
 
     {% include anchor.html name="Navigation" %}
