--- a/components/timeline.html
+++ b/components/timeline.html
@@ -3,7 +3,7 @@ title: Timeline
 layout: documentation
 doc-tab: components
 doc-subtab: timeline
-npm-version: 1.1.4
+npm-version: 1.0.23
 variables:
 - name: $timeline-marker-background-color
   value: $white
@@ -88,7 +88,7 @@ variables:
   </header>
   <div class="timeline-item">
     <div class="timeline-marker is-danger is-icon">
-      <i class="fa fa-flag"></i>
+      <i class="fa fa-plus"></i>
     </div>
     <div class="timeline-content">
       <p class="heading">March 2017</p>
