--- a/layout/divider.html
+++ b/layout/divider.html
@@ -3,10 +3,12 @@ title: Divider
 layout: documentation
 doc-tab: layout
 doc-subtab: divider
-npm-version: 0.1.0
+npm-version: 1.0.3
 variables:
 - name: $divider-background-color
   value: $grey-lighter
+- name: $divider-thickness
+  value: .1rem
 - name: $divider-font-size
   value: $size-7
 - name: $divider-color
