--- a/layout/divider.html
+++ b/layout/divider.html
@@ -3,7 +3,7 @@ title: Divider
 layout: documentation
 doc-tab: layout
 doc-subtab: divider
-npm-version: 1.0.3
+npm-version: 1.0.4
 variables:
 - name: $divider-background-color
   value: $grey-lighter
@@ -23,9 +23,9 @@ variables:
 
 {% capture divider_vertical_example %}
 <div class="columns">
-  <div class="column"></div>
+  <div class="column">Column 1</div>
   <div class="is-divider-vertical" data-content="OR"></div>
-  <div class="column"></div>
+  <div class="column">Column 2</div>
 </div>
 {% endcapture %}
 
