--- a/components/calendar.html
+++ b/components/calendar.html
@@ -3,7 +3,7 @@ title: Calendar
 layout: documentation
 doc-tab: components
 doc-subtab: calendar
-npm-version: 0.2.1
+npm-version: 2.0.0
 variables:
 - name: $calendar-border
   value: .1rem solid $grey-lighter
@@ -23,6 +23,9 @@ jsOptions:
 - name: startDate
   description: Date selected by default when Datepicker is displayed
   value: new Date()
+- name: weekStart
+  description: Weekstart day (by default defined by language)
+  value: 'null'
 - name: minDate
   description: Minimum date selectable
   value: 'null'
@@ -44,52 +47,38 @@ jsOptions:
 - name: closeOnSelect
   description: Close the Datepicker when selecting a date ?
   value: true
-- name: onSelect
-  description: Callback to call when selecting a date
-  value: 'null'
-- name: onOpen
-  description: Callback to call when opening the Datepicker
-  value: 'null'
-- name: onClose
-  description: Callback to call when closing the Datepicker
-  value: 'null'
 ---
 
 {% include subnav-components.html %}
 
 {% capture calendar_js_code %}
-document.addEventListener( 'DOMContentLoaded', function () {
-  var datePicker = new bulmaCalendar( document.getElementById( 'datepickerDemo' ), {
-    startDate: new Date(), // Date selected by default
-    dateFormat: 'yyyy-mm-dd', // the date format `field` value
-    lang: 'en', // internationalization
-    overlay: false,
-    closeOnOverlayClick: true,
-    closeOnSelect: true,
-    // callback functions
-    onSelect: null,
-    onOpen: null,
-    onClose: null,
-    onRender: null
-  } );
-  var datePicker = new bulmaCalendar( document.getElementById( 'datepickerDemo2' ), {
-    overlay: true
-  } );
-} );
+document.addEventListener('DOMContentLoaded', function () {
+  var datePickers = bulmaCalendar.attach('[type="date"]', {
+    overlay: true,
+    minDate: '2018-01-01',
+    maxDate: '2018-12-31',
+    dateFormat: 'yyyy-mm-dd'
+  });
+  // datePickers now contains an Array of all datePicker instances
+});
 {% endcapture %}
 
 {% capture calendar_example %}
 <div class="calendar">
   <div class="calendar-nav">
     <div class="calendar-nav-previous-month">
-      <button class="button is-text">
-        <i class="fa fa-chevron-left"></i>
+      <button class="button is-small is-text">
+        <svg viewBox="0 0 50 80" xml:space="preserve">
+          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
+        </svg>
       </button>
     </div>
-    <div>March 2017</div>
+    <div class="calendar-month">March 2017</div>
     <div class="calendar-nav-next-month">
-      <button class="button is-text">
-        <i class="fa fa-chevron-right"></i>
+      <button class="button is-small is-text">
+        <svg viewBox="0 0 50 80" xml:space="preserve">
+          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
+        </svg>
       </button>
     </div>
   </div>
@@ -148,14 +137,18 @@ document.addEventListener( 'DOMContentLoaded', function () {
 <div class="calendar is-large">
   <div class="calendar-nav">
     <div class="calendar-nav-previous-month">
-      <button class="button is-text">
-        <i class="fa fa-chevron-left"></i>
+      <button class="button is-small is-text">
+        <svg viewBox="0 0 50 80" xml:space="preserve">
+          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
+        </svg>
       </button>
     </div>
-    <div>March 2017</div>
+    <div class="calendar-month">March 2017</div>
     <div class="calendar-nav-next-month">
-      <button class="button is-text">
-        <i class="fa fa-chevron-right"></i>
+      <button class="button is-small is-text">
+        <svg viewBox="0 0 50 80" xml:space="preserve">
+          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
+        </svg>
       </button>
     </div>
   </div>
@@ -181,11 +174,11 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="calendar-date"><button class="date-item">1</button></div>
       <div class="calendar-date"><button class="date-item">2</button></div>
       <div class="calendar-date"><button class="date-item">3</button></div>
-      <div class="calendar-date tooltip" data-tooltip="Today"><button class="date-item is-today">4</button></div>
+      <div class="calendar-date"><button class="date-item is-today">4</button></div>
       <div class="calendar-date" disabled=""><button class="date-item">5</button></div>
       <div class="calendar-date"><button class="date-item">6</button></div>
       <div class="calendar-date"><button class="date-item">7</button></div>
-      <div class="calendar-date tooltip" data-tooltip="You have appointments">
+      <div class="calendar-date">
         <button class="date-item badge">8</button>
         <div class="calendar-events">
           <a class="calendar-event is-primary">Primary event</a>
@@ -238,11 +231,11 @@ document.addEventListener( 'DOMContentLoaded', function () {
 {% endcapture %}
 
 {% capture calendar_datepicker_example %}
-<input id="datepickerDemo" class="input" type="text">
+<input id="datepickerDemo" class="input" type="date">
 {% endcapture %}
 
 {% capture calendar_datepicker_overlay_example %}
-<input id="datepickerDemo2" class="input" type="text" value="11-02-2018">
+<input id="datepickerDemo2" class="input" type="date" value="11-02-2018">
 {% endcapture %}
 
 <section class="section">
@@ -327,17 +320,15 @@ document.addEventListener( 'DOMContentLoaded', function () {
 
     {% include jsOptions.html %}
 
-    <script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-calendar/dist/bulma-calendar.min.js"></script>
+    <script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-calendar/dist/bulma-calendar.js"></script>
     <script type="text/javascript">
-    document.addEventListener( 'DOMContentLoaded', function () {
-      var datePicker1 = new bulmaCalendar( document.getElementById( 'datepickerDemo' ), {} );
-      var datePicker2 = new bulmaCalendar( document.getElementById( 'datepickerDemo2' ), {
-        overlay: true,
-        minDate: new Date('2018-01-01'),
-        maxDate: new Date('2018-03-31'),
-        dateFormat: 'dd-mm-yyyy'
-      } );
-    } );
+    bulmaCalendar.attach('#datepickerDemo');
+    bulmaCalendar.attach('#datepickerDemo2', {
+      overlay: true,
+      minDate: '2018-01-01',
+      maxDate: '2018-12-31',
+      dateFormat: 'yyyy-mm-dd'
+    });
     </script>
   </div>
 </section>
