--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 2.0.12
+npm-version: 2.0.14
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
@@ -356,6 +356,7 @@ variables:
         </div>
       </div>
     </div>
+    <p>This carousel is handling swipe (by touch and/or mouse) to slide between items.</p>
 
     <hr>
     {% include snippet.html content=carousel_example size="one-half" more=true %}
