Make it obvious that a vertical divider spans the height of its parent

--- a/layout/divider.html
+++ b/layout/divider.html
@@ -25,7 +25,10 @@ variables:
 <div class="columns">
   <div class="column">Column 1</div>
   <div class="is-divider-vertical" data-content="OR"></div>
-  <div class="column">Column 2</div>
+  <div class="column">
+    Column 2 <br/>
+    Note: divider stretches to parent's height.
+  </div>
 </div>
 {% endcapture %}
 
