--- a/components/quickview.html
+++ b/components/quickview.html
@@ -35,58 +35,7 @@ variables:
 {% endcapture %}
 
 {% capture quickview_js_code %}
-function closest(el, selector) {
-  var matchesFn;
-
-  // find vendor prefix
-  [ 'matches', 'webkitMatchesSelector', 'mozMatchesSelector', 'msMatchesSelector', 'oMatchesSelector' ].some( function( fn ) {
-    if ( typeof document.body[ fn ] == 'function' ) {
-      matchesFn = fn;
-      return true;
-    }
-    return false;
-  } );
-
-  var parent;
-
-  // traverse parents
-  while ( el ) {
-      parent = el.parentElement;
-      if ( parent && parent[ matchesFn ]( selector ) ) {
-        return parent;
-      }
-      el = parent;
-  }
-
-  return null;
-}
-
-document.addEventListener( 'DOMContentLoaded', function () {
-  // Get all document sliders
-  var showQuickview = document.querySelectorAll( '[data-show="quickview"]' );
-  [].forEach.call( showQuickview, function ( show ) {
-    var quickview = document.getElementById( show.dataset[ 'target' ] );
-    if ( quickview ) {
-      // Add event listener to update output when slider value change
-      show.addEventListener( 'click', function( event ) {
-        quickview.classList.add( 'is-active' );
-      } );
-    }
-  } );
-
-  // Get all document sliders
-  var dismissQuickView = document.querySelectorAll( '[data-dismiss="quickview"]' );
-  [].forEach.call( dismissQuickView, function ( dismiss ) {
-    var quickview = closest( dismiss, '.quickview' );
-    if ( quickview ) {
-      // Add event listener to update output when slider value change
-      dismiss.addEventListener( 'click', function( event ) {
-        quickview.classList.remove( 'is-active' );
-      } );
-    }
-  } );
-} );
-
+<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-quickview/dist/bulma-quickview.min.js"></script>
 {% endcapture %}
 
 <div id="quickviewDefault" class="quickview">
@@ -152,12 +101,15 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="message-body">
         <div class="content">
           <p>
-            The extension comes with a JavaScript implementation to display / close the quickview.
+            The extension comes with a JavaScript implementation to display / close the quickview. Don't forget to include it in your project.
           </p>
 
           {% highlight html %}{{ quickview_js_html }}{% endhighlight %}
 
           {% highlight javascript %}{{ quickview_js_code }}{% endhighlight %}
+
+          <p>Then just add the following code once your DOM's ready:</p>
+          {% highlight javascript %}var quickviews = bulmaQuickview.attach(); // quickviews now contains an array of all Quickview instances{% endhighlight %}
         </div>
       </div>
     </div>
