--- a/components/calendar.html
+++ b/components/calendar.html
@@ -340,6 +340,10 @@ document.addEventListener('DOMContentLoaded', function () {
     <script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-calendar/dist/js/bulma-calendar.min.js"></script>
     <script type="text/javascript">
     bulmaCalendar.attach('#datepickerDemo');
+    let calendar = bulmaCalendar[0];
+    calendar.on('datepicker:date:selected', function(datePicker) {
+      alert(datePicker.date;
+    });
     bulmaCalendar.attach('#datepickerDemo2', {
       overlay: true,
       minDate: '2018-01-01',
