fix last example syntax

--- a/components/calendar.html
+++ b/components/calendar.html
@@ -342,7 +342,7 @@ document.addEventListener('DOMContentLoaded', function () {
     bulmaCalendar.attach('#datepickerDemo');
     let calendar = bulmaCalendar[0];
     calendar.on('datepicker:date:selected', function(datePicker) {
-      alert(datePicker.date;
+      alert(datePicker.date);
     });
     bulmaCalendar.attach('#datepickerDemo2', {
       overlay: true,
