--- a/components/calendar.html
+++ b/components/calendar.html
@@ -339,8 +339,8 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-calendar/dist/js/bulma-calendar.min.js"></script>
     <script type="text/javascript">
-    bulmaCalendar.attach('#datepickerDemo');
-    let calendar = bulmaCalendar[0];
+    var calendars = bulmaCalendar.attach('#datepickerDemo');
+    var calendar = calendars[0];
     calendar.on('datepicker:date:selected', function(datePicker) {
       alert(datePicker.date);
     });
