--- a/components/calendar.html
+++ b/components/calendar.html
@@ -341,12 +341,14 @@ document.addEventListener('DOMContentLoaded', function () {
     <script type="text/javascript">
     var calendars = bulmaCalendar.attach('#datepickerDemo');
     console.log(calendars);
-    [].forEach.call(calendars, function(calendar) {
+    window.setTimeout(function() {
+      [].forEach.call(calendars, function(calendar) {
       console.log(calendar);
       calendar.on('datepicker:date:selected', function(datePicker) {
         alert('Selected date: ' + datePicker.date);
       });
-    });
+    }), 100);
+    
     
     bulmaCalendar.attach('#datepickerDemo2', {
       overlay: true,
